--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!doctype html>
 <html lang="en">
   <title>!!!!!CHUCK NORRIS FACTS!!!!!</title>
+</head>
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
 </html>
+
